--- a/Desarrollo Web Full Stack/Recursos/03_JavaScriptDOM/index.html
+++ b/Desarrollo Web Full Stack/Recursos/03_JavaScriptDOM/index.html
@@ -138,5 +138,6 @@
     </footer>
     
     <script src="js/modernizr.js"></script>
+    <script src="js/01_SeleccionarElementos.js"></script>
 </body>
 </html>
